# clandmark

./: CMakeLists.txt  README.md
libclandmark/: CAppearanceModel.cpp  CDAGMaxSumSolver.cpp  CDeformationCost.cpp  CDisplacementDeformationCost.cpp  CFeaturePool.cpp  CFeatures.cpp  CLandmark.cpp  CLandmark.h  CLoss.cpp  CMakeLists.txt  CMaxSumSolver.cpp  CNormalizedEuclideanLoss.cpp  CSparseLBPAppearanceModel.cpp  CSparseLBPFeatures.cpp  CTableLoss.cpp  CTreeMaxSumSolver.cpp  CXMLInOut.cpp  CZeroLoss.cpp  Flandmark.cpp
libclandmark/include/clandmark/: CAppearanceModel.h  CDAGMaxSumSolver.h  CDeformationCost.h  CDisplacementDeformationCost.h  CFeaturePool.h  CLandmark.h  CLoss.h  CMaxSumSolver.h  CNormalizedEuclideanLoss.h  CSparseLBPAppearanceModel.h  CSparseLBPFeatures.h  CTableLoss.h  CTimer.h  CTreeMaxSumSolver.h  CTypes.h  CXMLInOut.h  CZeroLoss.h  Flandmark.h
